# aced-attorney-engine

./: Cargo.toml  README.md  makefile
assets/data/: playground.json
docs/: exit_codes.md  notes.md  todo.md
src/: assets.rs  config.rs  debug.rs  gameloop.rs  global_keybinds.rs  helpers.rs  lib.rs  main.rs  types.rs
src/assets/: acapella_table.rs  fs.rs  mod.rs  sound_table.rs  texture_table.rs
src/importers/: data_importer.rs  mod.rs
src/objects/: mod.rs  shout.rs  textbox.rs
tools/aced-editor/: Cargo.toml
tools/textbox-editor/: Cargo.toml
tools/textbox-editor/src/: main.rs
