[workspace]
resolver = "2"
members = [
    ".",
    "tools/textbox-editor"
]

[package]
name = "aced-attorney-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"]}
serde = { version = "1.0.225", features = ["derive"]}
serde_json = "1.0.145"